# card-fraud-transaction-management

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  TODO.md  card_fraud_transaction_management_api.md  docker-compose.local.yml  platform-adapter.yaml  pyproject.toml
.githooks/: pre-push
app/: __init__.py  main.py
app/api/routes/: __init__.py  bulk.py  cases.py  decision_events.py  health.py  monitoring.py  notes.py  reviews.py  worklist.py
app/core/: auth.py  config.py  database.py  dependencies.py  errors.py  logging.py  observability.py
app/core/security/: pan_detector.py
app/domain/models/: transaction.py
app/ingestion/: kafka_consumer.py
app/persistence/: base.py  case_repository.py  notes_repository.py  review_repository.py  transaction_repository.py
app/schemas/: __init__.py  bulk.py  case.py  decision_event.py  notes.py  review.py  worklist.py
app/services/: bulk_operations_service.py  case_service.py  ingestion_service.py  notes_service.py  review_service.py  transaction_service.py  worklist_service.py
cli/: _constants.py  _runner.py  auth0_bootstrap.py  auth0_verify.py  db_local.py  db_setup.py  dev.py  doppler_local.py  infra_check.py  lint.py  objstore_local.py  openapi.py  platform_adapter.py  test.py
db/: fraud_transactions_schema.sql  seed_demo.sql
docs/: README.md  codemap.md
docs/01-setup/: README.md  auth0-setup-guide.md  configuration.md  database-setup.md  doppler-secrets-setup.md  kafka-setup.md
docs/02-development/: README.md  architecture.md  domain-and-contracts.md  idempotency-and-replay.md  storage-and-migrations.md
docs/03-api/: README.md  decision-event-schema-v1.md  decision-event.schema.v1.json  ingestion.md  openapi-outline.md  openapi.json  query-api.md  ui-integration.md
docs/04-testing/: README.md  testing-strategy.md
docs/05-deployment/: README.md  deployment-and-config.md
docs/06-operations/: README.md  dlq-triage.md  error-and-dlq-model.md  observability.md  replay-backfill.md  retention-and-archival.md  runbook-readme.md  security-and-data-governance.md
docs/07-reference/: 0000-use-adr.md  0001-async-sqlalchemy.md  0002-composite-idempotency-key.md  0003-separate-review-layer.md  0004-evaluation-types.md  0005-uuidv7-for-ids.md  0006-kafka-dlz-pattern.md  0007-ruleset-metadata.md  0008-token-only-card-mode.md  README.md  auth-model.md  fraud-analyst-workflow.md
scripts/: fetch_neon_connections.py  generate_openapi.py  local_full_setup.py  neon_full_setup.py  run_dev.py  run_tests.py  seed_transactions.py  setup_auth0.py  setup_database.py  setup_kafka.py  setup_neon.py  sync_doppler_db_urls.py  verify_auth0.py  verify_schema.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_bulk_e2e.py  test_cases_e2e.py  test_full_workflows_e2e.py  test_notes_e2e.py  test_reviews_e2e.py  test_worklist_e2e.py
tests/integration/: conftest.py  test_api_integration.py  test_repository.py
tests/smoke/: conftest.py  test_api_smoke.py  test_api_smoke_expanded.py
tests/unit/: test_auth.py  test_case_repository_serialization.py  test_config.py  test_cursor_pagination.py  test_database.py  test_decision_events_routes.py  test_dependencies.py  test_errors.py  test_health_routes.py  test_ingestion_service.py  test_kafka_consumer.py  test_logging.py  test_main.py  test_monitoring_route.py  test_observability.py  test_pan_detector.py  test_response_schema_validation.py  test_review_repository_field_mapping.py  test_schemas.py  test_seed_transactions.py  test_services.py  test_services_notes.py  test_transaction_models.py  test_transaction_repository.py  test_transaction_repository_sql.py  test_transaction_service.py  test_worklist_service_edge_cases.py
tests/utils/: __init__.py  schema_validators.py  sql_helpers.py
